2.02/todo-app/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: todo-backend
          image: lloydrivers052/todo-backend:v1.0
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
