2.02/todo-app/manifests/reader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-deployment
  template:
    metadata:
      labels:
        app: todo-deployment
    spec:
      containers:
        - name: reader
          image: lloydrivers052/reader-app:v1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
