2.02/todo-app/manifests/writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-deployment
  namespace: practice # This is the namespace where the deployment is created
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writer-deployment
  template:
    metadata:
      labels:
        app: writer-deployment
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: writer
          image: lloydrivers052/writer-app:v1.0
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
