2.02/todo-app/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend-deployment
  ports:
    - port: 3002
      protocol: TCP
      targetPort: 3002
