2.02/todo-app/manifests/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-deployment
  template:
    metadata:
      labels:
        app: todo-deployment
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: reader
          image: djblackett/lr-frontend:v.10
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files

---
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo-deployment
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
