2.02/todo-app/manifests/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo-deployment
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
